@@ -2,6 +2,10 @@ To do: focal for multi-layer objects
 
 --- development version
 new option 'setStatistics=FALSE' for writing to some GDAL files (geoTiff in particular) to suppress writing band statistics (min, max, mean, sd). This is currently not documented. When TRUE, all statistics are written when all the values are in memory, but only min and max are written in other cases, leading to problems in QGIS (reported by Agustin Lobo)
+Fixed bug in sampleRandom with "rowcol=TRUE", reported by Agustin Lobo
+Added argument "gridded=TRUE" for plot(RasterLayer, RasterLayer), to show counts for intervals (suggested by Agustin Lobo)
+new argument 'alignOnly' to projectRaster
+
 
 --- 1-September-2012, version 2.0-12
 fixed bug in summary reported by Agustin Lobo
